--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "klaw": "^2.0.0",
     "log4js": "^2.3.1",
     "mongoose": "^5.0.2",
-    "peer-upnp": "0.0.5"
+    "peer-upnp": "0.0.5",
+    "socket.io": "^2.0.4"
   }
 }
